<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HmWk02-lorenbak</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="test_time">11:50:03 pm</string>
    <string name="verbose">Verbose</string>
    <string name="alarm_countdown">12:34:22</string>
    <string name="alarm_date">November 5, 2013</string>
    <string name="alarm_time">11:20:32 am</string>
    <string name="alarm_start">Start</string>
    <string name="alarm_stop">Stop</string>
    <string name="alarm_date_time_header">Alarm Date and Time</string>
    <string name="alarm_time_to_alarm">Time To Alarm</string>
    <string name="alarm_set_message">Alarm set: Jan 3, 2014 11:23 AM</string>
    <string name="alarm_set">"Alarm set: "</string>
    <string name="today">"Alarm set: Today "</string>

</resources>