<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txttvAlarmCountdownHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/alarm_time_to_alarm"
        android:textAppearance="@style/AppTheme"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvAlarmCountdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/alarm_countdown"
        android:textAppearance="@style/AppTheme"
        android:textSize="35sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#cccccc"
        android:paddingTop="20dp" />

    <TextView
        android:id="@+id/tvDateTimeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/alarm_date_time_header"
        android:textAppearance="@style/AppTheme"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvAlarmDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/alarm_date"
                android:textAppearance="@style/AppTheme"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnChangeAlarmDate"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:onClick="showDatePickerDialog"
                android:text="Set Alarm Date"
                android:textSize="20sp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvAlarmTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/alarm_time"
                android:textAppearance="@style/AppTheme"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnChangeAlarmTime"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:onClick="showTimePickerDialog"
                android:text="Set Alarm Time"
                android:textSize="20sp"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#cccccc"
        android:paddingTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/btnStart"
            style="@style/AppTheme"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:onClick="startAlarmTimer"
            android:text="@string/alarm_start"
            android:textSize="30sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnStop"
            style="@style/AppTheme"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:onClick="stopAlarmTimer"
            android:text="@string/alarm_stop"
            android:textSize="30sp"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>